--- a/client/src/app/layouts/login/login.component.html
+++ b/client/src/app/layouts/login/login.component.html
@@ -37,7 +37,7 @@
     <div class="mt-4 flex justify-between">
       <form class="flex gap-2">
         <input type="checkbox" />
-        <label for="checkbox">Recordareme</label>
+        <label for="checkbox">Recordarme</label>
       </form>
       <a href="/forget-password" class="text-violet-900">¿Has olvidado tu contraseña?</a>
     </div>
