--- a/client/src/app/layouts/signup/signup.component.html
+++ b/client/src/app/layouts/signup/signup.component.html
@@ -75,7 +75,7 @@
 
     <div class="mt-4 flex justify-between">
       <form class="flex gap-2">
-        <input type="checkbox" />
+        <input type="checkbox" formControlName="terminos"/>
         <label for="checkbox">
           He leído y estoy de acuerdo con
           <a href="/terminos" class="text-blue-600">terminos &amp; condiciones</a>
