--- a/client/src/app/components/review/review.component.html
+++ b/client/src/app/components/review/review.component.html
@@ -19,8 +19,8 @@
           </div>
         </td>
         <td class="mx-auto text-center">{{ product.price }}</td>
-        <td class="text-center align-middle">{{ product.count }}</td>
-        <td class="mx-auto text-center">{{ product.price * product.count }}</td>
+        <td class="text-center align-middle">{{ product.quantity }}</td>
+        <td class="mx-auto text-center">{{ product.price * product.quantity }}</td>
       </tr>
     </ng-container>
   </tbody>
