--- a/client/src/app/layouts/catalog/catalog.component.html
+++ b/client/src/app/layouts/catalog/catalog.component.html
@@ -81,7 +81,7 @@
           
           <mat-select formControlName="brand" (selectionChange)="getBrandsFilters($event)"
             class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-            id="brand">
+            id="brand" multiple>
             @for (food of listMarca; track food) {
             <mat-option [value]="food.name">{{food.name}}</mat-option>
             }
@@ -114,7 +114,7 @@
         <div class="flex w-full justify-between">
           <mat-select formControlName="Marcavehicular" (selectionChange)="getMarcaFilters($event)"
             class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-            id="Vehiclebrand">
+            id="Vehiclebrand" multiple>
             @for (food of list; track food) {
             <mat-option [value]="food.name">{{food.name}}</mat-option>
             }
@@ -131,7 +131,7 @@
         <div class="flex w-full justify-between">
           <mat-select formControlName="Referenciavehicular" (selectionChange)="getSizeFilters($event)"
             class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-            id="Vehiclebrand">
+            id="Vehiclebrand" multiple>
             @for (food of listReferencias; track food) {
             <mat-option [value]="food.name">{{food.name}}</mat-option>
             }
