--- a/client/src/app/components/marca-product-form/marca-product-form.component.html
+++ b/client/src/app/components/marca-product-form/marca-product-form.component.html
@@ -7,6 +7,18 @@
     (ngSubmit)="onSubmit()"
     class="bg-white p-6 rounded-lg shadow-md"
   >
+    <div class="mb-4">
+      <label class="block text-gray-700 font-bold mb-2" for="name"
+        >Categoria</label
+      >
+      <mat-select formControlName="category"
+        class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+        id="Vehiclebrand">
+        @for (food of list; track food) {
+        <mat-option [value]="food.name">{{food.name}}</mat-option>
+        }
+      </mat-select>
+    </div>
     <!-- Full Name -->
     <div class="mb-4">
       <label class="block text-gray-700 font-bold mb-2" for="name"
@@ -20,7 +32,6 @@
         required
       />
     </div>
-    
     <!-- Submit Button -->
     <div class="flex items-center justify-end">
       <button
