--- a/client/src/app/components/product-edit-form/product-edit-form.component.html
+++ b/client/src/app/components/product-edit-form/product-edit-form.component.html
@@ -156,7 +156,7 @@
       </select> -->
       <mat-select formControlName="Marcavehicular"
         class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-        id="Vehiclebrand">
+        id="Vehiclebrand" (selectionChange)="filtrarReferencias($event)">
         @for (food of list; track food) {
         <mat-option [value]="food.name">{{food.name}}</mat-option>
         }
