--- a/client/src/app/components/payment/payment.component.html
+++ b/client/src/app/components/payment/payment.component.html
@@ -6,7 +6,7 @@
         x-mask="9999 9999 9999 9999"
         class="w-full px-4 py-2 border lg:w-1/2"
         placeholder="1223 4568 7644 4839"
-        (change)="setCardHolder($event)"
+        (change)="setCardNumber($event)"
       />
     </div>
     <div class="flex flex-col w-full">
@@ -15,7 +15,7 @@
         class="w-full px-4 py-2 border lg:w-1/2"
         type="text"
         placeholder="SARAH JOHNSON"
-        (change)="setCardNumber($event)"
+        (change)="setCardHolder($event)"
       />
     </div>
     <div class="flex items-center gap-5 lg:w-1/2">
@@ -76,5 +76,9 @@
         alt="mastercard icon"
       />
     </section>
+    <div class="flex items-center gap-2">
+      <input type="checkbox" (change)="setIsCheck($event)" />
+      <label>Acepto los terminos y condiciones</label>
+    </div>
   </form>
 </div>
