--- a/client/src/app/components/product-edit-form/product-edit-form.component.html
+++ b/client/src/app/components/product-edit-form/product-edit-form.component.html
@@ -15,6 +15,13 @@
         class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
         id="name" type="text" placeholder="Enter product name" required>
     </div>
+    <!-- SKU -->
+    <div class="mb-4">
+      <label class="block text-gray-700 font-bold mb-2" for="sku">SKU</label>
+      <input formControlName="sku"
+        class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+        id="sku" type="number" placeholder="Enter product SKU" required>
+    </div>
     <!-- Price -->
     <div class="mb-4">
       <label class="block text-gray-700 font-bold mb-2" for="price">Price</label>
